--- a/moode-cfg/config
+++ b/moode-cfg/config
@@ -5,12 +5,12 @@
 IMG_NAME=moode-r940
 RELEASE=bookworm
 DEPLOY_ZIP=1
-LOCALE_DEFAULT=en_US.UTF-8
+LOCALE_DEFAULT=zh_US.UTF-8
 TARGET_HOSTNAME=moode
 KEYBOARD_KEYMAP=us
 KEYBOARD_LAYOUT="English (US)"
-TIMEZONE_DEFAULT=America/Detroit
+TIMEZONE_DEFAULT=Asia/Shanghai
 ENABLE_SSH=0
 DEPLOY_DIR="$BASE_DIR/../deploy"
-LANGUAGE=en_US.UTF-8
+LANGUAGE=zh_US.UTF-8
 LC_ALL=C.UTF-8
